added interest section

--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -16,7 +16,9 @@
 </div>
 <footer class="page-footer">
   <div class="page-footer-wrapper">
-    <div class="container-fluid"></div>
+    <div class="container-fluid text-center">
+      <p>©2021 Jinu Kurian</p>
+    </div>
   </div>
 </footer>
 <script src="js/vendors.min.js"></script>
