--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -120,5 +120,39 @@ html(lang='en')
                                 +timeline("2010 - 2014", "B.Tech - Information Technology", "TocH Institute of Science & Technology (CUSAT)")
                                 +timeline("2008 - 2010", "Higher Secondary", "St: Ignatius H.S.S, Kanjiramattom")
                                 +timeline("2003 - 2008", "High School", "St: Mary's H.S, Kandanad")
+                
+                section#interests.section.section-interests
+                    .container
+                        h2.section-title My Interests
+                        .section-box
+                            p
+                                | I have a keen interest in football. I play attacking mid or winger.
+                                | Like to surf in internet and learn/discover new stuffs thats happening around.
+                                | Like to solve puzzles,crosswords,sudoku etc.
+                                | love to play chess and was a champion in a competition held by our local club :p.
+                                | I also like volunteering social activities.
+                            ul.interests-list
+                                li
+                                    i.gnu-icon.gnu-icon-art
+                                    span Penicil Drawing
+                                li
+                                    i.gnu-icon.gnu-icon-movie
+                                    span Watch Movies
+                                li
+                                    i.gnu-icon.gnu-icon-coffee
+                                    span Coffee
+                                li
+                                    i.gnu-icon.gnu-icon-travelling
+                                    span Travelling
+                                li
+                                    i.gnu-icon.gnu-icon-football
+                                    span Playing Football
+                                li
+                                    i.gnu-icon.gnu-icon-badminton
+                                    span Badminton
+                                li
+                                    i.gnu-icon.gnu-icon-fitness
+                                    span Fitness
+
 
         include includes/footer
