--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -191,3 +191,62 @@ blockquote {
     position: relative;
     margin-bottom: 40px;
 }
+
+.interests-list {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    li {
+        margin: 7px 5px;
+        width: 74px;
+        height: 74px;
+        display: inline-block;
+        border: 1px solid #d7dbde;
+        position: relative;
+        border-radius: 3px;
+    }
+    i {
+        display: block;
+        width: 100%;
+        height: 100%;
+        font-size: 30px;
+        line-height: 74px;
+        cursor: pointer;
+        color: #000;
+    }
+    span {
+        color: #fff;
+        font-size: 11px;
+        font-weight: 400;
+        line-height: 1;
+        display: inline-block;
+        background-color: #717171;
+        padding: 5px 8px;
+        white-space: nowrap;
+        position: absolute;
+        top: 100%;
+        margin-top: 10px;
+        z-index: 1;
+        opacity: 0;
+        visibility: hidden;
+        border-radius: 3px;
+        transition: all 0.15s ease-in;
+        transform: translate3d(0, -15px, 0);
+        backface-visibility: hidden;
+    }
+    li {
+        &:hover {
+            span {
+                opacity: 1;
+                visibility: visible;
+                transition: all 0.35s ease-out;
+                transform: translate3d(0, 0, 0);
+                backface-visibility: hidden;
+            }
+        }
+    }
+}
