--- a/src/templates/includes/footer.pug
+++ b/src/templates/includes/footer.pug
@@ -11,6 +11,7 @@
 
 footer.page-footer
   .page-footer-wrapper
-    .container-fluid
+    .container-fluid.text-center
+      p ©2021 Jinu Kurian
 script(src="js/vendors.min.js")
 script(src="js/main.min.js")
