mobile responsiveness is done

--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -10,6 +10,7 @@
           <li class="nav__item"><a class="nav__item_link" href="#experience">Experience</a></li>
           <li class="nav__item"><a class="nav__item_link" href="#contact">Contact</a></li>
         </ul>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
       </nav>
     </div>
   </div>
