--- a/src/scss/base/_helpers.scss
+++ b/src/scss/base/_helpers.scss
@@ -110,6 +110,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    display: none;
     &-cover {
         position: fixed;
         background: lighten(#20202b, 0.9);
