--- a/src/templates/includes/header.pug
+++ b/src/templates/includes/header.pug
@@ -12,6 +12,8 @@ header.page-head.page-head--masthead
           +item('Skills', '#skills', false)
           +item('Experience', '#experience', false)
           +item('Contact', '#contact', false)
+        button.navbar-toggler(type='button' data-toggle='collapse' aria-expanded='false' aria-label='Toggle navigation')
+          span.navbar-toggler-icon
   
          
   
