--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -53,10 +53,10 @@ html(lang='en')
                         .section-box
                             .profile
                                 .row
-                                    .grid-xs-4
+                                    .grid-sm-4
                                         .profile-photo
                                             img(src='images/jinukurian.jpg' alt='Jinu Kurian')
-                                    .grid-xs-8
+                                    .grid-sm-8
                                         .profile-info
                                             .profile-preword
                                                 span Hello
