--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -1,11 +1,16 @@
 .section-about {
     .profile {
-        padding: 60px 50px 15px 50px;
+        padding: 30px 0 15px 0;
+        @include bp(tablet-up) {
+            padding: 60px 50px 15px 50px;
+        }
     }
     .profile-photo {
-        margin-right: 10%;
         margin-bottom: 10px;
         pointer-events: none;
+        @include bp(mobile-up) {
+            margin-right: 10%;
+        }
     }
     .profile-info {
         color: #3d4451;
@@ -104,7 +109,10 @@
         text-align: center;
         li {
             display: inline-block;
-            margin: 0 15px;
+            margin: 0;
+            @include bp(mobile-up) {
+                margin: 0 15px;
+            }
         }
         a {
             width: 45px;
@@ -178,9 +186,9 @@ blockquote {
 
 .section-box {
     background-color: #fff;
-    padding: 40px 50px;
+    padding: 30px 30px;
     box-shadow: 0 1px 6px rgb(0 0 0 / 12%), 0 1px 4px rgb(0 0 0 / 24%);
-    @media (max-width: 992px) {
+    @include bp(tablet-up) {
         padding: 50px 40px;
     }
 }
@@ -205,9 +213,11 @@ blockquote {
         width: 74px;
         height: 74px;
         display: inline-block;
-        border: 1px solid #d7dbde;
         position: relative;
         border-radius: 3px;
+        @include bp(tablet-up) {
+            border: 1px solid #d7dbde;
+        }
     }
     i {
         display: block;
