--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -107,10 +107,10 @@ html(lang='en')
                         h2.section-title Work Experience
                         .timeline
                             .timeline-inner
-                                +timeline("2017 October - Current", "White Rabbit Group", "Senior UI Developer", "Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&rsquo;s precisely matched their design.")
-                                +timeline("2015 May - 2017 October", "Phases India Technology Pvt. Ltd", "Associate UI developer", "Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&rsquo;s precisely matched their design.")
-                                +timeline("2014 June - 2015 May", "QPlay Tech Pvt. Ltd", "UI/UX Developer and designer", "Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&rsquo;s precisely matched their design.")
-                                +timeline("2014 May - 2014 June", "PixelDreams, Kochin", "UI Developer/SEO (trainee)", "Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&rsquo;s precisely matched their design.")
+                                +timeline("2017 October - Current", "White Rabbit Group", "Senior UI Developer", "Creating web application front end as per design comps and information architecture by following best practices and standards for accessibility and cross browser compatibility.")
+                                +timeline("2015 May - 2017 October", "Phases India Technology Pvt. Ltd", "Associate UI developer", "Combine the art of design with the art of programming. Responsibilities will include translation of the UI/UX design wireframes to actual code that will produce visual elements of the application.")
+                                +timeline("2014 June - 2015 May", "QPlayTech Pvt. Ltd", "UI/UX Designer and Developer", "Developing well-thought-out user experience flows and designing and developing interfaces for websites that provide the best possible user experience.")
+                                //- +timeline("2014 May - 2014 June", "PixelDreams, Kochin", "UI Developer/SEO (trainee)", "Working as part of a multi-disciplinary team, carrying out tasks including conversion of PSD/AI/InDesign to html, Newsletter etc. Had a specific brief to ensure the websites build for customer&rsquo;s precisely matched their design.")
 
                 section#education.section.section-education
                     .container
