--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -80,7 +80,7 @@ html(lang='en')
                                     +social('https://codepen.io/jinukurian7', 'codepen')
                         .section-txt-btn
                             p
-                                a(class="btn btn-primary" target="_blank" href="files/Jinu-CV.pdf" alt="Download Resume") Download Resume
+                                a(class="btn btn-primary" target="_blank" href="files/Jinu-resume.pdf" alt="Download Resume") Download Resume
 
                 section.section.about-me
                     .container
