--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,4 +4,13 @@ footer {
     p {
         margin-bottom: 0;
     }
+    .copyright {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        p {
+            margin-left: 5px;
+            margin-right: 5px;
+        }
+    }
 }
