--- a/src/includes/footer.html
+++ b/src/includes/footer.html
@@ -1,29 +1,1 @@
-
-<div class="preloader">
-  <div class="preloader-cover"></div>
-  <div class="preloader-content">
-    <h4></h4>
-    <div class="preloader-load" id="preloader">
-      <div class="preloader-load-first">
-        <svg viewbox="0 0 100 1.7" preserveaspectratio="none" style="width: 100%; height: 100%;">
-          <path d="M 0,0.85 L 100,0.85" stroke="#191923" stroke-width="1.7" fill-opacity="0"></path>
-          <path class="progressbar" d="M 0,0.85 L 100,0.85" stroke="#ffc107" stroke-width="1.7" fill-opacity="0"></path>
-        </svg>
-        <div class="progressbar-text"> </div>
-      </div>
-    </div>
-  </div>
-</div>
-<footer class="page-footer">
-  <div class="page-footer-wrapper">
-    <div class="container-fluid text-center">
-      <div class="copyright">&copy;
-        <p id="copyright">
-          <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-        </p>    Jinu Kurian
-      </div>
-    </div>
-  </div>
-</footer>
-<script src="js/vendors.min.js"></script>
-<script src="js/main.min.js"></script>
+<div class="preloader"><div class="preloader-cover"></div><div class="preloader-content"><h4></h4><div class="preloader-load" id="preloader"><div class="preloader-load-first"><svg viewbox="0 0 100 1.7" preserveaspectratio="none" style="width: 100%; height: 100%;"><path d="M 0,0.85 L 100,0.85" stroke="#191923" stroke-width="1.7" fill-opacity="0"></path><path class="progressbar" d="M 0,0.85 L 100,0.85" stroke="#ffc107" stroke-width="1.7" fill-opacity="0"></path></svg><div class="progressbar-text"> </div></div></div></div></div><footer class="page-footer"><div class="page-footer-wrapper"><div class="container-fluid text-center"><div class="copyright">&copy;<p id="copyright"><script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script></p>    Jinu Kurian</div></div></div></footer><script src="js/vendors.min.js"></script><script src="js/main.min.js"></script>
