--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -1,17 +1,1 @@
-
-<header class="page-head page-head--masthead">
-  <div class="page-head-wrapper">
-    <div class="container-fluid">
-      <nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo.svg"/></a>
-        <ul class="navbar-nav">
-          <li class="nav__item active"><a class="nav__item_link" href="#home">Home</a></li>
-          <li class="nav__item"><a class="nav__item_link" href="#about">About</a></li>
-          <li class="nav__item"><a class="nav__item_link" href="#skills">Skills</a></li>
-          <li class="nav__item"><a class="nav__item_link" href="#experience">Experience</a></li>
-          <li class="nav__item"><a class="nav__item_link" href="#contact">Contact</a></li>
-        </ul>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-      </nav>
-    </div>
-  </div>
-</header>
+<header class="page-head page-head--masthead"><div class="page-head-wrapper"><div class="container-fluid"><nav class="navbar"><a class="navbar-brand" href="/"><img src="images/logo.svg"/></a><ul class="navbar-nav"><li class="nav__item active"><a class="nav__item_link" href="#home">Home</a></li><li class="nav__item"><a class="nav__item_link" href="#about">About</a></li><li class="nav__item"><a class="nav__item_link" href="#skills">Skills</a></li><li class="nav__item"><a class="nav__item_link" href="#experience">Experience</a></li><li class="nav__item"><a class="nav__item_link" href="#contact">Contact</a></li></ul><button class="navbar-toggler" type="button" data-toggle="collapse" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button></nav></div></div></header>
