Updated photo and removed age

--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -68,7 +68,7 @@ html(lang='en')
                                                 em Jinu Kurian
                                             h2.profile-position Senior UI Engineer
                                         ul.profile-list
-                                            +about('age', `${Math.round((currDate - dob) * 0.0001)}`)
+                                            //- +about('age', `${Math.round((currDate - dob) * 0.0001)}`)
                                             +about('Address', 'Panakkattu(H), Kandanad, Ernakulam, Kerala')
                                             +about('E-mail', 'jinukurian7@gmail.com', 'mailto:jinukurian7@gmail.com')
                                             +about('Phone', '+91 8891280830', 'tel:+918891280830')
